# hscpy

./: README.md  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/hscpy/: __init__.py  abc.py  burden.py  mitchell.py  parameters.py  realisation.py  sfs.py  variant.py
src/hscpy/figures/: __init__.py  abc.py  burden.py  mitchell.py  options.py  sfs.py  simulations.py  variant.py
tests/: test_burden.py  test_hscpy.py  test_parameters.py
