[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hscpy"
version = "0.1.4"
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/fraterenz/hscpy"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
