[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hscpy"
version = "0.4.4"
dependencies = [
  "matplotlib",
  "pandas",
  "seaborn",
  "scipy",
  "futils @ git+https://github.com/fraterenz/futils@biorxiv",
  "numpy>=1.21",
]
requires-python = ">=3.7"
authors = [
  {name = "Francesco Terenzi"},
]
description = "Plots the hsc dynamics generated with https://github.com/fraterenz/hsc"
readme = "README.md"
license = {file = "LICENSE"}

[tool.hatch.metadata]
"allow-direct-references" = true

[project.urls]
"Homepage" = "https://github.com/fraterenz/hscpy"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
